--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
--e git+https://github.com/dkappe/lczero_tools.git@a90a3cc56ed654ba298eb9183c026191780102ed#egg=lczero_tools
-numpy==1.15.3
-python-chess==0.23.9
-torch==0.4.1
+beautifulsoup4==4.6.0
+certifi==2018.4.16
+chardet==3.0.4
+fire==0.1.3
+idna==2.7
+-e git+https://github.com/so-much-meta/lczero_tools.git@0636285a63cc16c5d0f50bd6d35d9c3a19fb58d2#egg=lczero_tools
+numpy==1.14.5
+python-chess==0.23.6
+requests==2.19.1
+six==1.11.0
+torch==0.4.0
+tqdm==4.23.4
+urllib3==1.23
